Fix horizontal scrolling and whitespace on right of page

--- a/app/assets/stylesheets/scss/main/layout.scss
+++ b/app/assets/stylesheets/scss/main/layout.scss
@@ -20,5 +20,7 @@ body {
 html {
   position: relative;
   min-height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
